--- a/stocker_project/templates/stocker/base.html
+++ b/stocker_project/templates/stocker/base.html
@@ -3,17 +3,27 @@
 
 <html>
 <head lang="pt">
- <meta charset="UTF-8" />
- <title>
+	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<title>
  	Stocker
 	{% block title_block %}
  	{% endblock %}
- </title>
+	</title>
 </head>
 <body>
-	<div>
- 		{% block body_block %}
- 		{% endblock %}
- 	</div>
+	<nav class="navbar navbar-dark bg-dark">
+	  <!-- Navbar content -->
+	</nav>
+			<div class="row-sm-3" id="sidebar">
+				{% block sidebar %}
+				{% endblock %}
+			</div>
+				<div class="row-sm-1"></div>
+				<div class="row-sm-7" id="conteudo">
+					{% block conteudo %}
+					{% endblock %}
+				</div>
+				<div class="row-sm-1"></div>
 </body>
 </html>
