esqueleto template base pronto

--- a/stocker_project/templates/stocker/base.html
+++ b/stocker_project/templates/stocker/base.html
@@ -10,20 +10,52 @@
 	{% block title_block %}
  	{% endblock %}
 	</title>
+	<style>
+		nav {
+			color: #C4C4C4;
+		}
+		#logo {
+			font-size: 45px;
+		}
+
+	</style>
 </head>
 <body>
-	<nav class="navbar navbar-dark bg-dark">
-	  <!-- Navbar content -->
+	<nav class="row navbar navbar-dark bg-dark">
+		<div class="col-md-2" id="logo">STOCKER</div>
+		<div class="col-md-2"></div>
+		<div class="col-md-3" id="pesquisa">
+			<div class="input-group col-md-12">
+				<span class="input-group-append">
+					<button class="btn btn-outline-secondary" type="button">
+						<i class="fa fa-search">Ir</i> <!-- Aqui vai o icone -->
+					</button>
+				  </span>
+				<input class="form-control py-2" type="search" placeholder="Pesquisar" id="example-search-input"/>
+			</div>
+			<!-- BARRA DE PESQUISA -->
+		</div>
+		<div class="col-md-1"></div>
+		<div class="col-md-3" id="area-user">
+			<img id="icone-user"/>
+			<div id="nome-user"> Aqui vai o icone e o nome user </div>
+		</div>
+		<div class="col-md-1">SAIR</div>
 	</nav>
-			<div class="row-sm-3" id="sidebar">
+	<div id="corpo" class="row">
+			<div class="col-md-3 bg-light" id="sidebar">
 				{% block sidebar %}
 				{% endblock %}
 			</div>
-				<div class="row-sm-1"></div>
-				<div class="row-sm-7" id="conteudo">
+				<div class="col-md-1"></div>
+				<div class="col-md-7" id="conteudo">
 					{% block conteudo %}
 					{% endblock %}
 				</div>
-				<div class="row-sm-1"></div>
+				<div class="col-md-1"></div>
+	</div>
+	<div class="jumbotron text-center" style="margin-bottom:0">
+  <p>Stocker by alunos do BSI-6 de 2018 - Ana, Bruno, Igor, José</p>
+</div>
 </body>
 </html>
