--- a/stocker_project/templates/stocker/base.html
+++ b/stocker_project/templates/stocker/base.html
@@ -49,7 +49,7 @@
 			</div>
 				<div class="col-md-1"></div>
 				<div class="col-md-7" id="conteudo">
-					{% block conteudo %}
+					{% block body_block %}
 					{% endblock %}
 				</div>
 				<div class="col-md-1"></div>
