--- a/stocker_project/templates/stocker/inserir_insumos.html
+++ b/stocker_project/templates/stocker/inserir_insumos.html
@@ -1,2 +1,24 @@
 {% extends 'stocker/base.html' %}
 {% load staticfiles %}
+
+{% block title_block %}
+Adicionar Categoria
+{% endblock %}
+
+{% block body_block %}
+    <h1>Adicionar Insumo</h1>
+    <div>
+    <form id="category_form" method="post" action="{%  url 'inserir_insumos' %}">
+        {% csrf_token %}
+        {% for hidden in form.hidden_fields %}
+            {{ hidden }}
+        {% endfor %}
+        {% for field in form.visible_fields %}
+            {{ field.errors }}
+            {{ field.help_text }}
+            {{field}}
+        {% endfor %}
+        <input type="submit" name="submit" value="Criar Insumo" />
+    </form>
+    </div>
+{% endblock %}
