parte template index

--- a/stocker_project/templates/stocker/base.html
+++ b/stocker_project/templates/stocker/base.html
@@ -47,14 +47,14 @@
 				{% block sidebar %}
 				{% endblock %}
 			</div>
-				<div class="col-md-1"></div>
-				<div class="col-md-7" id="conteudo">
-					{% block body_block %}
-					{% endblock %}
-				</div>
-				<div class="col-md-1"></div>
+            <div class="col-md-1"></div>
+            <div class="col-md-7" id="conteudo">
+                {% block body_block %}
+                {% endblock %}
+            </div>
+            <div class="col-md-1"></div>
 	</div>
-	<div class="jumbotron text-center" style="margin-bottom:0">
+	<div class="jumbotron text-center" style="margin-bottom:0; position:absolute; bottom:0;width:100%;">
   <p>Stocker by alunos do BSI-6 de 2018 - Ana, Bruno, Igor, José</p>
 </div>
 </body>
