--- a/stocker_project/templates/stocker/index.html
+++ b/stocker_project/templates/stocker/index.html
@@ -5,10 +5,24 @@
 {% endblock %}
 
 {% block body_block %}
-	<h1>Bem-vindo...</h1>
-	<div>
-		<strong>{{ boldmessage }}</strong><br />
-	</div>
+	<h1 class="display-2">Bem-vindo</h1>
+
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <p class="lead">
+            Se você é novo no nosso site <strong>Cadastre-se</strong>!
+          </p>
+        </div>
+        <div class="col-sm">
+          <p class="lead">
+            Se você já é cadastrado é só <strong>Entrar</strong>!
+          </p>
+        </div>
+      </div>
+    </div>
+
 	<div>
 		<ul>
 			<li><a href="{% url 'register' %}">Cadastro</a></li>
